Added `ALLOWED_HOSTS` and `SECRET_KEY` variables

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,8 @@
+# Comma-separated list of allowed hosts for CORS and TrustedHostMiddleware
+# Use * for allowing all hosts (not recommended for production)
+# Examples: localhost, example.com, *.example.com
+ALLOWED_HOSTS=domain.com,*.domain.com
+SECRET_KEY="" # Еhe minimum length is 32 characters
 BAN_MINUTES=5
 MAX_CONNECTIONS=4
 
