--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,4 @@
 SQLAlchemy[asyncio]~=2.0.36
-DateTime~=5.5
 pydantic~=2.9.2
 paramiko~=3.5.0
 marzban~=0.4.1
@@ -14,7 +13,7 @@ python-dotenv~=1.0.1
 environs~=11.0.0
 redis~=5.1.1
 websockets~=13.1
-cryptography~=44.0.3
+cryptography~=44.0.1
 WTForms~=3.1.2
 pydantic_core~=2.23.4
 Jinja2~=3.1.5
@@ -23,4 +22,8 @@ cffi~=1.17.1
 aiosqlite~=0.20.0
 asyncpg>=0.29.0
 asyncmy>=0.2.10
-pycrypto>=2.6.1
+fastapi-storages~=0.3.0
+argon2_cffi>=23.1.0
+pycryptodome>=3.22.0
+itsdangerous~=2.2.0
+psycopg2-binary~=2.9.10
