--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,103 +1,96 @@
 services:
   bl4ck:
-    build: ./src
+    image: bl4ck-luip:1.0
     container_name: bl4ck_luip
     command: bash -c "alembic upgrade head && uvicorn app:app --host 0.0.0.0 --port 7767 --log-level debug --workers 1 --forwarded-allow-ips='*' --proxy-headers"
-    network_mode: "host"
-    # If you use bridge mode for existing containers (redis, MySQL, PostgreSQL not in bridge)
-    # networks:
-    #   - shared-network
-
-    # If you up postgres and redis in bridge
-    # networks:
-    #   - bl4ck-luip-network
-    # Do not publish port to all internet (USE Nginx, HAProxy or Traefik reverse proxy)
+    depends_on:
+      - postgres
+      - redis
+    networks:
+      - bl4ck-luip-network
     ports:
-      "127.0.0.1:7767:7767"
+      - "127.0.0.1:7767:7767"
     env_file:
       - ".env"
     volumes:
       - ./.env:/usr/src/app/.env
       - ./volumes/ssh_keys/:/usr/src/app/keys/
-  # postgres:
-  #   image: postgres:16.0-alpine3.18
-  #   container_name: bl4ck_postgres
-  #   networks:
-  #     - bl4ck-luip-network
-  #   env_file:
-  #     - ".env"
-  #   environment:
-  #     POSTGRES_DB: "${DB_NAME}"
-  #     POSTGRES_USER: "${DB_USER}"
-  #     POSTGRES_PASSWORD: "${DB_PASS}"
-  #     PGDATA: "/var/lib/postgresql/data/pgdata"
-  #   volumes:
-  #     - ./volumes:/var/lib/postgresql/data
-  #   # Do not publish port to all internet (USE Nginx, HAProxy or Traefik reverse proxy)
-  #   ports:
-  #     - "127.0.0.1:5432:5432"
-  #   # Params for VPS 1 CPU 1 RAM
-  #   command:
-  #     - "postgres"
-  #     - "-c"
-  #     - "max_connections=100"
-  #     - "-c"
-  #     - "shared_buffers=256MB"
-  #     - "-c"
-  #     - "effective_cache_size=512MB"
-  #     - "-c"
-  #     - "work_mem=1280kB"
-  #     - "-c"
-  #     - "maintenance_work_mem=64MB"
-  #     - "-c"
-  #     - "random_page_cost=1.2"
-  #     - "-c"
-  #     - "temp_file_limit=1GB"
-  #     - "-c"
-  #     - "log_min_duration_statement=500ms"
-  #     - "-c"
-  #     - "idle_in_transaction_session_timeout=10s"
-  #     - "-c"
-  #     - "lock_timeout=1s"
-  #     - "-c"
-  #     - "statement_timeout=30s"
-  #     - "-c"
-  #     - "shared_preload_libraries=pg_stat_statements"
-  #     - "-c"
-  #     - "pg_stat_statements.max=5000"
-  #     - "-c"
-  #     - "pg_stat_statements.track=all"
-  #     - "-c"
-  #     - "checkpoint_completion_target=0.7"
-  #     - "-c"
-  #     - "wal_buffers=8MB"
-  #     - "-c"
-  #     - "default_statistics_target=50"
-  #     - "-c"
-  #     - "effective_io_concurrency=4"
-  #     - "-c"
-  #     - "huge_pages=off"
-  #     - "-c"
-  #     - "min_wal_size=512MB"
-  #     - "-c"
-  #     - "max_wal_size=2GB"
-
-    # redis:
-    #   image: redis:latest
-    #   container_name: bl4ck_redis
-    #   networks:
-    #     - bl4ck-luip-network
-    #   command: redis-server --appendonly yes
-    #   volumes:
-    #     - redisdata:/data
+  postgres:
+    image: postgres:16.0-alpine3.18
+    container_name: bl4ck_postgres
+    networks:
+      - bl4ck-luip-network
+    env_file:
+      - ".env"
+    environment:
+      POSTGRES_DB: "${DB_NAME}"
+      POSTGRES_USER: "${DB_USER}"
+      POSTGRES_PASSWORD: "${DB_PASS}"
+      PGDATA: "/var/lib/postgresql/data/pgdata"
+    volumes:
+      - ./volumes:/var/lib/postgresql/data
     # Do not publish port to all internet (USE Nginx, HAProxy or Traefik reverse proxy)
-    #   ports:
-    #     - "127.0.0.1:6379:6379"
+    ports:
+      - "127.0.0.1:5442:5432"
+    # Params for VPS 1 CPU 1 RAM
+    command:
+      - "postgres"
+      - "-c"
+      - "max_connections=100"
+      - "-c"
+      - "shared_buffers=256MB"
+      - "-c"
+      - "effective_cache_size=512MB"
+      - "-c"
+      - "work_mem=1280kB"
+      - "-c"
+      - "maintenance_work_mem=64MB"
+      - "-c"
+      - "random_page_cost=1.2"
+      - "-c"
+      - "temp_file_limit=1GB"
+      - "-c"
+      - "log_min_duration_statement=500ms"
+      - "-c"
+      - "idle_in_transaction_session_timeout=10s"
+      - "-c"
+      - "lock_timeout=1s"
+      - "-c"
+      - "statement_timeout=30s"
+      - "-c"
+      - "shared_preload_libraries=pg_stat_statements"
+      - "-c"
+      - "pg_stat_statements.max=5000"
+      - "-c"
+      - "pg_stat_statements.track=all"
+      - "-c"
+      - "checkpoint_completion_target=0.7"
+      - "-c"
+      - "wal_buffers=8MB"
+      - "-c"
+      - "default_statistics_target=50"
+      - "-c"
+      - "effective_io_concurrency=4"
+      - "-c"
+      - "huge_pages=off"
+      - "-c"
+      - "min_wal_size=512MB"
+      - "-c"
+      - "max_wal_size=2GB"
 
-# If you use bridge mode for container
-# `docker network create shared-network`
-# networks:
-#   shared-network:
-#     driver: bridge
-#   bl4ck-luip-network:
-#     driver: bridge
+  redis:
+    image: redis:latest
+    container_name: bl4ck_redis
+    environment:
+      REDIS_PASSWORD: "${REDIS_PASSWORD}"
+    command: redis-server --save 20 1 --loglevel warning --requirepass "${REDIS_PASSWORD}"
+    networks:
+      - bl4ck-luip-network
+    volumes:
+      - ./volumes/redis:/data
+    ports:
+      - "127.0.0.1:6399:6379"
+
+networks:
+  bl4ck-luip-network:
+    driver: bridge
