Change host names to docker container name

--- a/.env.example
+++ b/.env.example
@@ -2,27 +2,25 @@
 # Use * for allowing all hosts (not recommended for production)
 # Examples: localhost, example.com, *.example.com
 ALLOWED_HOSTS=domain.com,*.domain.com
-SECRET_KEY="" # Еhe minimum length is 32 characters
+SECRET_KEY="" # The minimum length is 32 characters
 BAN_MINUTES=5
 MAX_CONNECTIONS=4
 
 REDIS_PASSWORD=''
 REDIS_PORT=6379
-REDIS_HOST=127.0.0.1
+REDIS_HOST=redis
 
 
 # YOUR DB SETTINGS
 DATABASE_URL=sqlite+aiosqlite:///banned_ips.db
-# Or use postgres/mysql
-# DB_HOST='127.0.0.1'
+# Or use postgres
+# DB_HOST=postgres
 # DB_PORT=5432
 # DB_USER=postgres
 # DB_PASS='your_db_password'
 # DB_NAME=bl4ck_luip
 # URL for PostgreSQL
 # DATABASE_URL=postgresql+asyncpg://${DB_USER}:${DB_PASS}@${DB_HOST}:${DB_PORT}/${DB_NAME}
-# URL for MySQL
-# DATABASE_URL=mysql+asyncmy://${DB_USER}:${DB_PASS}@${DB_HOST}:${DB_PORT}/${DB_NAME}
 
 # MARZBAN SETTINGS
 SSL_ENABLED=True
