Added admin credentials

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,6 @@
+ADMIN_LOGIN=admin
+ADMIN_PASSWORD=adminadmin
+
 # Comma-separated list of allowed hosts for CORS and TrustedHostMiddleware
 # Use * for allowing all hosts (not recommended for production)
 # Examples: localhost, example.com, *.example.com
